--- a/assets/About/about.html
+++ b/assets/About/about.html
@@ -9,7 +9,8 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="stylesheet" href="../Css/sharing.css" />
+    <link rel="stylesheet" href="./About.css" />
 
     <title>Document</title>
   </head>
@@ -36,18 +37,18 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="./index.html"
+                  href="../Index/index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./events.html">Events</a>
+                <a class="nav-link" href="../Events/events.html">Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contact</a>
+                <a class="nav-link" href="../Contact/contact.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./about.html">About</a>
+                <a class="nav-link" href="../About/about.html">About</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
