--- a/assets/Events/events.html
+++ b/assets/Events/events.html
@@ -9,7 +9,8 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="stylesheet" href="../css/sharing.css" />
+    <link rel="stylesheet" href="./events.css" />
 
     <title>Document</title>
   </head>
@@ -36,18 +37,18 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="./index.html"
+                  href="../Index/index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./events.html">Events</a>
+                <a class="nav-link" href="../Events/events.html">Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contact</a>
+                <a class="nav-link" href="../Contact/contact.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./about.html">About</a>
+                <a class="nav-link" href="../About/about.html">About</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -162,69 +163,69 @@
         <div class="container">
           <div class="box quality">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-01.jpg" alt="" />
+              <img decoding="async" src="../img/features-01.jpg" alt="" />
             </div>
             <h2>Quality</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
               harum hic veniam eligendi minima
             </p>
-            <a href="./event.html">More</a>
+            <a href="../Event/event.html">More</a>
           </div>
           <div class="box time">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-02.jpg" alt="" />
+              <img decoding="async" src="../img/features-02.jpg" alt="" />
             </div>
             <h2>Time</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
               harum hic veniam eligendi minima
             </p>
-            <a href="./event.html">More</a>
+            <a href="../Event/event.html">More</a>
           </div>
           <div class="box passion">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-03.jpg" alt="" />
+              <img decoding="async" src="../img/features-03.jpg" alt="" />
             </div>
             <h2>Passion</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
               harum hic veniam eligendi minima
             </p>
-            <a href="./event.html">More</a>
+            <a href="../Event/event.html">More</a>
           </div>
           <div class="box quality">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-01.jpg" alt="" />
+              <img decoding="async" src="../img/features-01.jpg" alt="" />
             </div>
             <h2>Quality</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
               harum hic veniam eligendi minima
             </p>
-            <a href="./event.html">More</a>
+            <a href="../Event/event.html">More</a>
           </div>
           <div class="box time">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-02.jpg" alt="" />
+              <img decoding="async" src="../img/features-02.jpg" alt="" />
             </div>
             <h2>Time</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
               harum hic veniam eligendi minima
             </p>
-            <a href="./event.html">More</a>
+            <a href="../Event/event.html">More</a>
           </div>
           <div class="box passion">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-03.jpg" alt="" />
+              <img decoding="async" src="../img/features-03.jpg" alt="" />
             </div>
             <h2>Passion</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
               harum hic veniam eligendi minima
             </p>
-            <a href="./event.html">More</a>
+            <a href="../Event/event.html">More</a>
           </div>
         </div>
       </div>
@@ -236,6 +237,7 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="../Index/index.js"></script>
+    <script src="./events.js"></script>
   </body>
 </html>
