--- a/events.html
+++ b/events.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="stylesheet" href="./assets/css/events.css" />
 
     <title>Document</title>
   </head>
@@ -162,7 +163,7 @@
         <div class="container">
           <div class="box quality">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-01.jpg" alt="" />
+              <img decoding="async" src="./assets/img/features-01.jpg" alt="" />
             </div>
             <h2>Quality</h2>
             <p>
@@ -173,7 +174,7 @@
           </div>
           <div class="box time">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-02.jpg" alt="" />
+              <img decoding="async" src="./assets/img/features-02.jpg" alt="" />
             </div>
             <h2>Time</h2>
             <p>
@@ -184,7 +185,7 @@
           </div>
           <div class="box passion">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-03.jpg" alt="" />
+              <img decoding="async" src="./assets/img/features-03.jpg" alt="" />
             </div>
             <h2>Passion</h2>
             <p>
@@ -195,7 +196,7 @@
           </div>
           <div class="box quality">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-01.jpg" alt="" />
+              <img decoding="async" src="./assets/img/features-01.jpg" alt="" />
             </div>
             <h2>Quality</h2>
             <p>
@@ -206,7 +207,7 @@
           </div>
           <div class="box time">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-02.jpg" alt="" />
+              <img decoding="async" src="./assets/img/features-02.jpg" alt="" />
             </div>
             <h2>Time</h2>
             <p>
@@ -217,7 +218,7 @@
           </div>
           <div class="box passion">
             <div class="img-holder">
-              <img decoding="async" src="./img/features-03.jpg" alt="" />
+              <img decoding="async" src="./assets/img/features-03.jpg" alt="" />
             </div>
             <h2>Passion</h2>
             <p>
