--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,7 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/sharing.css" />
-
+    <link rel="stylesheet" href="./assets/Css/index.css" />
     <title>Document</title>
   </head>
   <body>
@@ -36,18 +35,18 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="../Index/index.html"
+                  href="./index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../Events/events.html">Events</a>
+                <a class="nav-link" href="./events.html">Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../Contact/contact.html">Contact</a>
+                <a class="nav-link" href="./contact.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../About/about.html">About</a>
+                <a class="nav-link" href="./about.html">About</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
