--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
     <!-- slider -->
     <div class="container-fluid carousel-container">
       <div class="row home-page-slide justify-content-center py-5">
+        <div class="d-flex justify-content-center mb-4 section-title">
+          <h1><i class="fas fa-star me-2"></i>فعاليات الأسبوع المميزة</h1>
+        </div>
 
-        <div id="home-page-slide" class="carousel slide col-10 ">
+        <div id="home-page-slide" class="carousel slide col-10 " data-bs-interval="5000" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#home-page-slide" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -67,38 +70,56 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F961736613%2F532420644249%2F1%2Foriginal.20250216-122832?crop=focalpoint&fit=crop&w=940&auto=format%2Ccompress&q=75&sharp=10&fp-x=0.5&fp-y=0.5&s=922a170aa088cfa5e1b23755145e50ba"
+                src="./assets/img/event 1/slide.webp"
                 class="d-block w-100"
-                alt="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F961736613%2F532420644249%2F1%2Foriginal.20250216-122832?crop=focalpoint&fit=crop&w=940&auto=format%2Ccompress&q=75&sharp=10&fp-x=0.5&fp-y=0.5&s=922a170aa088cfa5e1b23755145e50ba" />
+                alt="slide img not found" />
               <div class="carousel-caption d-none d-md-block fw-bold">
-                <h5>First slide label</h5>
-                <p>
-                  Some representative placeholder content for the first slide.
-                </p>
+                <div class="container slider-content">
+                  <h1>كأس السوبر الإسباني 2026</h1>
+                  <p class="event-details">
+                    <span class="date"><strong>التاريخ:</strong> 10 يناير 2026</span>
+                    <span class="location"><strong>المكان:</strong> جدة – ملعب الجوهرة</span>
+                    <span class="category"><strong>التصنيفات:</strong> رياضة</span>
+                  </p>
+                  <p> مباراة كروية مثيرة تجمع بين أفضل فرق الدوري الإسباني لتحديد الفائز بكأس
+                    السوبر، في أجواء حماسية لعشاق كرة القدم.</p>
+                </div>
               </div>
             </div>
             <div class="carousel-item">
               <img
-                src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F961736613%2F532420644249%2F1%2Foriginal.20250216-122832?crop=focalpoint&fit=crop&w=940&auto=format%2Ccompress&q=75&sharp=10&fp-x=0.5&fp-y=0.5&s=922a170aa088cfa5e1b23755145e50ba"
+                src="./assets/img/event 2/slide.webp"
                 class="d-block w-100"
-                alt="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F961736613%2F532420644249%2F1%2Foriginal.20250216-122832?crop=focalpoint&fit=crop&w=940&auto=format%2Ccompress&q=75&sharp=10&fp-x=0.5&fp-y=0.5&s=922a170aa088cfa5e1b23755145e50ba" />
+                alt="slide img not found" />
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>
-                  Some representative placeholder content for the second slide.
-                </p>
+                <div class="container slider-content">
+                  <h1>موسم جدة 2025</h1>
+                  <p class="event-details">
+                    <span class="date"><strong>التاريخ:</strong> حتى 31 ديسمبر 2025</span>
+                    <span class="location"><strong>المكان:</strong> مدينة جدة</span>
+                    <span class="category"><strong>التصنيفات:</strong> ترفيهي</span>
+                  </p>
+                  <p> فعاليات ترفيهية وثقافية ورياضية متنوعة تقدم عروضاً حية، حفلات موسيقية،
+                    مهرجانات عائلية، وتجارب ممتعة لجميع الأعمار.</p>
+                </div>
               </div>
             </div>
             <div class="carousel-item">
               <img
-                src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F961736613%2F532420644249%2F1%2Foriginal.20250216-122832?crop=focalpoint&fit=crop&w=940&auto=format%2Ccompress&q=75&sharp=10&fp-x=0.5&fp-y=0.5&s=922a170aa088cfa5e1b23755145e50ba"
+                src="./assets/img/event 3/slide.webp"
                 class="d-block w-100"
-                alt="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F961736613%2F532420644249%2F1%2Foriginal.20250216-122832?crop=focalpoint&fit=crop&w=940&auto=format%2Ccompress&q=75&sharp=10&fp-x=0.5&fp-y=0.5&s=922a170aa088cfa5e1b23755145e50ba" />
+                alt="slide img not found" />
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>
-                  Some representative placeholder content for the third slide.
-                </p>
+                <div class="container slider-content">
+                  <h1>مهرجان التراث الجدة 2025</h1>
+                  <p class="event-details">
+                    <span class="date"><strong>التاريخ:</strong> 5–15 نوفمبر 2025</span>
+                    <span class="location"><strong>المكان:</strong> جدة – كورنيش جدة والمناطق التراثية</span>
+                    <span class="category"><strong>التصنيفات:</strong> ثقافي</span>
+                  </p>
+                  <p> احتفال بالتراث والثقافة المحلية، يشمل عروض الفنون التقليدية، الحرف اليدوية،
+                    والأنشطة التاريخية التي تعكس الهوية الثقافية للمدينة.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -116,11 +137,14 @@
 
     <!-- categories -->
     <div class="container">
+      <div class="d-flex justify-content-center section-title my-4">
+        <h1><i class="fas fa-list-ul me-2"></i>تصنيفات الفعاليات</h1>
+      </div>
 
       <div class="my-5 d-flex justify-content-around">
 
         <!-- categories name -->
-        <div id="music" class="categorie-container d-flex justify-content-center ">
+        <div id="music" class="activecategorie-container d-flex justify-content-center ">
           <div class="categorie btn-links btn btn-outline-dark d-flex
          flex-column align-items-center justify-content-evenly p-4 rounded-circle ">
             <i class="fa-solid fa-music fa-2xl "></i>
@@ -153,10 +177,18 @@
 
       <!-- categories cards -->
       <div id="cardsContainer" class="row pt-5 m-auto">
-        <div class="card-deck" >
+        <div class="card-deck">
           <!-- Cards will be dynamically inserted here -->
         </div>
       </div>
+
+    </div>
+
+    <div class="container">
+      <div class="d-flex justify-content-center mb-4 section-title">
+        <h1><i class="fas fa-calendar-check me-2"></i>أحدث الفعاليات</h1>
+      </div>
+
 
     </div>
 
