--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item ms-2">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item ps-5">
               <a class="nav-link active" aria-current="page" href="./index.html">الرئيسية</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ps-5">
               <a class="nav-link" href="./events.html">الفعاليات</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">تواصل معنى</a>
+            <li class="nav-item ps-5">
+              <a class="nav-link" href="./contact.html">تواصل معنا</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ps-5">
               <a class="nav-link" href="./about.html">عنا</a>
             </li>
           </ul>
@@ -54,143 +54,177 @@
   </header>
   <main>
     <!-- slider -->
-    <div class="container-fluid carousel-container">
-      <div class="row home-page-slide justify-content-center py-5">
-        <div class="d-flex justify-content-center mb-4 section-title">
-          <h1><i class="fas fa-star me-2"></i>فعاليات الأسبوع المميزة</h1>
-        </div>
+    <section class="slider-sec">
+      <div class="container-fluid carousel-container">
+        <div class="row home-page-slide justify-content-center py-5">
+          <div class="d-flex justify-content-center mb-4 section-title">
+            <h1><i class="fas fa-star me-2"></i>فعاليات الأسبوع المميزة</h1>
+          </div>
 
-        <div id="home-page-slide" class="carousel slide col-10 " data-bs-interval="5000" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#home-page-slide" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#home-page-slide" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#home-page-slide" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <div id="home-page-slide" class="carousel slide col-10 " data-bs-interval="5000" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#home-page-slide" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#home-page-slide" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#home-page-slide" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/img/event 1/slide1.jpg" class="d-block w-100" alt="slide img not found" />
+                <div class="carousel-caption d-none d-md-block fw-bold">
+                  <div class="container slider-content">
+                    <h1>كأس السوبر الإسباني 2026</h1>
+                    <p class="event-details">
+                      <span class="date"><strong>التاريخ:</strong> 10 يناير 2026</span>
+                      <span class="location"><strong>المكان:</strong> جدة – ملعب الجوهرة</span>
+                      <span class="category"><strong>التصنيفات:</strong> رياضة</span>
+                    </p>
+                    <p> مباراة كروية مثيرة تجمع بين أفضل فرق الدوري الإسباني لتحديد الفائز بكأس
+                      السوبر، في أجواء حماسية لعشاق كرة القدم.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/event 2/slide.webp" class="d-block w-100" alt="slide img not found" />
+                <div class="carousel-caption d-none d-md-block">
+                  <div class="container slider-content">
+                    <h1>موسم جدة 2025</h1>
+                    <p class="event-details">
+                      <span class="date"><strong>التاريخ:</strong> حتى 31 ديسمبر 2025</span>
+                      <span class="location"><strong>المكان:</strong> مدينة جدة</span>
+                      <span class="category"><strong>التصنيفات:</strong> ترفيهي</span>
+                    </p>
+                    <p> فعاليات ترفيهية وثقافية ورياضية متنوعة تقدم عروضاً حية، حفلات موسيقية،
+                      مهرجانات عائلية، وتجارب ممتعة لجميع الأعمار.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/event 3/slide.webp" class="d-block w-100" alt="slide img not found" />
+                <div class="carousel-caption d-none d-md-block">
+                  <div class="container slider-content">
+                    <h1>مهرجان التراث الجدة 2025</h1>
+                    <p class="event-details">
+                      <span class="date"><strong>التاريخ:</strong> 5–15 نوفمبر 2025</span>
+                      <span class="location"><strong>المكان:</strong> جدة – كورنيش جدة والمناطق التراثية</span>
+                      <span class="category"><strong>التصنيفات:</strong> ثقافي</span>
+                    </p>
+                    <p> احتفال بالتراث والثقافة المحلية، يشمل عروض الفنون التقليدية، الحرف اليدوية،
+                      والأنشطة التاريخية التي تعكس الهوية الثقافية للمدينة.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#home-page-slide" data-bs-slide="prev">
+              <i class="fa-solid fa-angle-right fa-2xl"></i>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#home-page-slide" data-bs-slide="next">
+              <i class="fa-solid fa-angle-left fa-2xl"></i>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="./assets/img/event 1/slide.webp"
-                class="d-block w-100"
-                alt="slide img not found" />
-              <div class="carousel-caption d-none d-md-block fw-bold">
-                <div class="container slider-content">
-                  <h1>كأس السوبر الإسباني 2026</h1>
-                  <p class="event-details">
-                    <span class="date"><strong>التاريخ:</strong> 10 يناير 2026</span>
-                    <span class="location"><strong>المكان:</strong> جدة – ملعب الجوهرة</span>
-                    <span class="category"><strong>التصنيفات:</strong> رياضة</span>
-                  </p>
-                  <p> مباراة كروية مثيرة تجمع بين أفضل فرق الدوري الإسباني لتحديد الفائز بكأس
-                    السوبر، في أجواء حماسية لعشاق كرة القدم.</p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img
-                src="./assets/img/event 2/slide.webp"
-                class="d-block w-100"
-                alt="slide img not found" />
-              <div class="carousel-caption d-none d-md-block">
-                <div class="container slider-content">
-                  <h1>موسم جدة 2025</h1>
-                  <p class="event-details">
-                    <span class="date"><strong>التاريخ:</strong> حتى 31 ديسمبر 2025</span>
-                    <span class="location"><strong>المكان:</strong> مدينة جدة</span>
-                    <span class="category"><strong>التصنيفات:</strong> ترفيهي</span>
-                  </p>
-                  <p> فعاليات ترفيهية وثقافية ورياضية متنوعة تقدم عروضاً حية، حفلات موسيقية،
-                    مهرجانات عائلية، وتجارب ممتعة لجميع الأعمار.</p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img
-                src="./assets/img/event 3/slide.webp"
-                class="d-block w-100"
-                alt="slide img not found" />
-              <div class="carousel-caption d-none d-md-block">
-                <div class="container slider-content">
-                  <h1>مهرجان التراث الجدة 2025</h1>
-                  <p class="event-details">
-                    <span class="date"><strong>التاريخ:</strong> 5–15 نوفمبر 2025</span>
-                    <span class="location"><strong>المكان:</strong> جدة – كورنيش جدة والمناطق التراثية</span>
-                    <span class="category"><strong>التصنيفات:</strong> ثقافي</span>
-                  </p>
-                  <p> احتفال بالتراث والثقافة المحلية، يشمل عروض الفنون التقليدية، الحرف اليدوية،
-                    والأنشطة التاريخية التي تعكس الهوية الثقافية للمدينة.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#home-page-slide" data-bs-slide="prev">
-            <i class="fa-solid fa-angle-right fa-2xl"></i>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#home-page-slide" data-bs-slide="next">
-            <i class="fa-solid fa-angle-left fa-2xl"></i>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </div>
-    </div>
+
+
+    </section>
+
+
 
     <!-- categories -->
-    <div class="container">
-      <div class="d-flex justify-content-center section-title my-4">
-        <h1><i class="fas fa-list-ul me-2"></i>تصنيفات الفعاليات</h1>
-      </div>
+    <section class="categories-sec wave">
 
-      <div class="my-5 d-flex justify-content-around">
+      <div class="container">
+        <div class="d-flex justify-content-center section-title my-4">
+          <h1><i class="fas fa-list-ul me-2"></i>تصنيفات الفعاليات</h1>
+        </div>
 
-        <!-- categories name -->
-        <div id="music" class="activecategorie-container d-flex justify-content-center ">
-          <div class="categorie btn-links btn btn-outline-dark d-flex
+        <div class="my-5 d-flex justify-content-around">
+
+          <!-- categories name -->
+          <div id="music" class="activecategorie-container d-flex justify-content-center ">
+            <div class="categorie btn-links btn btn-outline-dark d-flex
          flex-column align-items-center justify-content-evenly p-4 rounded-circle ">
-            <i class="fa-solid fa-music fa-2xl "></i>
-            <span>الموسيقى</span>
+              <i class="fa-solid fa-music fa-2xl "></i>
+              <span>الموسيقى</span>
+            </div>
+          </div>
+          <div id="culture" class=" categorie-container d-flex justify-content-center">
+            <div class="categorie btn-links btn btn-outline-dark d-flex
+         flex-column align-items-center justify-content-evenly p-4 rounded-circle ">
+              <i class="fa-solid fa-users-rays fa-2xl"></i>
+              <span>ثقافة</span>
+            </div>
+          </div>
+          <div id="sport" class="categorie-container d-flex justify-content-center">
+            <div class="categorie btn-links btn btn-outline-dark d-flex
+         flex-column align-items-center justify-content-evenly p-4 rounded-circle ">
+              <i class="fa-solid fa-medal fa-2xl"></i>
+              <span>رياضة</span>
+            </div>
+          </div>
+          <div id="family" class="categorie-container d-flex justify-content-center">
+            <div class="categorie btn-links btn btn-outline-dark d-flex
+         flex-column align-items-center justify-content-evenly p-4 rounded-circle ">
+              <i class="fa-solid fa-people-group fa-2xl"></i>
+              <span>عائلي</span>
+            </div>
+          </div>
+
+        </div>
+
+        <!-- categories cards -->
+        <div id="cardsContainer" class="row pt-5 m-auto">
+          <div class="card-deck">
+            <!-- Cards will be dynamically inserted here -->
           </div>
         </div>
-        <div id="culture" class=" categorie-container d-flex justify-content-center">
-          <div class="categorie btn-links btn btn-outline-dark d-flex
-         flex-column align-items-center justify-content-evenly p-4 rounded-circle ">
-            <i class="fa-solid fa-users-rays fa-2xl"></i>
-            <span>ثقافة</span>
-          </div>
-        </div>
-        <div id="sport" class="categorie-container d-flex justify-content-center">
-          <div class="categorie btn-links btn btn-outline-dark d-flex
-         flex-column align-items-center justify-content-evenly p-4 rounded-circle ">
-            <i class="fa-solid fa-medal fa-2xl"></i>
-            <span>رياضة</span>
-          </div>
-        </div>
-        <div id="family" class="categorie-container d-flex justify-content-center">
-          <div class="categorie btn-links btn btn-outline-dark d-flex
-         flex-column align-items-center justify-content-evenly p-4 rounded-circle ">
-            <i class="fa-solid fa-people-group fa-2xl"></i>
-            <span>عائلي</span>
-          </div>
-        </div>
 
       </div>
 
-      <!-- categories cards -->
-      <div id="cardsContainer" class="row pt-5 m-auto">
-        <div class="card-deck">
-          <!-- Cards will be dynamically inserted here -->
+      <div class="wave">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path
+            d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+            opacity=".25" class="shape-fill"></path>
+          <path
+            d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+            opacity=".5" class="shape-fill"></path>
+          <path
+            d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+            class="shape-fill"></path>
+        </svg>
+      </div>
+    </section>
+
+    <!-- Latest events -->
+    <section class="latest-events wave ">
+
+      <div class="container">
+        <div class="d-flex justify-content-center mb-4 section-title">
+          <h1><i class="fas fa-calendar-check me-2"></i>أحدث الفعاليات</h1>
+          
+        </div>
+
+        <div class="wave">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path
+              d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+              opacity=".25" class="shape-fill"></path>
+            <path
+              d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+              opacity=".5" class="shape-fill"></path>
+            <path
+              d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+              class="shape-fill"></path>
+          </svg>
         </div>
       </div>
-
-    </div>
-
-    <div class="container">
-      <div class="d-flex justify-content-center mb-4 section-title">
-        <h1><i class="fas fa-calendar-check me-2"></i>أحدث الفعاليات</h1>
-      </div>
-
-
-    </div>
+      
+    </section>
 
   </main>
 
