add events imges

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 
   <link rel="stylesheet" href="./assets/css/index.css" />
-  <link rel="stylesheet" href="./assets/css/events.css" />
 
   <title>Document</title>
 </head>
@@ -72,7 +71,8 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/img/event 1/slide1.jpg" class="d-block w-100" alt="slide img not found" />
+                <img src="./assets/img/events/supercup_pics/supercup_pics_5.jpg" class="d-block w-100"
+                  alt="slide img not found" />
                 <div class="carousel-caption d-none d-md-block fw-bold">
                   <div class="container slider-content">
                     <h1>كأس السوبر الإسباني 2026</h1>
@@ -87,7 +87,8 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/event 2/slide.webp" class="d-block w-100" alt="slide img not found" />
+                <img src="./assets/img/events/jeddahseason_pics/jeddahseason_pics_3.jpg" class="d-block w-100"
+                  alt="slide img not found" />
                 <div class="carousel-caption d-none d-md-block">
                   <div class="container slider-content">
                     <h1>موسم جدة 2025</h1>
@@ -102,7 +103,8 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/event 3/slide.webp" class="d-block w-100" alt="slide img not found" />
+                <img src="./assets/img/events/jeddahheritage_pics/jeddahheritage_pics_2.jpg" class="d-block w-100"
+                  alt="slide img not found" />
                 <div class="carousel-caption d-none d-md-block">
                   <div class="container slider-content">
                     <h1>مهرجان التراث الجدة 2025</h1>
@@ -135,7 +137,7 @@
 
 
     <!-- categories -->
-    <section class="categories-sec wave">
+    <section class="categories-sec wave-sec">
 
       <div class="container">
         <div class="d-flex justify-content-center section-title my-4">
@@ -201,13 +203,36 @@
     </section>
 
     <!-- Latest events -->
-    <section class="latest-events wave ">
+
+    <section class="latest-events wave-sec ">
 
       <div class="container">
         <div class="d-flex justify-content-center mb-4 section-title">
           <h1><i class="fas fa-calendar-check me-2"></i>أحدث الفعاليات</h1>
-          
         </div>
+        <div class="cards-3 section-gray">
+          <div class="row justify-content-center">
+
+            <div class="col-xl-4 col-lg-6 ">
+              <div class="card card-background p-3 m-3"
+                style="background-image: url('http://adamthemes.com/demo/code/cards/images/blog07.jpeg')">
+                <div class="table">
+                  <h6 class="category text-info">Category</h6>
+                  <h3 class="card-caption">Quisque id elit maximus, pretium mollis elit</h3>
+                  <p class="card-description"> Lorem ipsum dolor sit amet, consectetur adipis cingelit. Etiam lacinia
+                    elit
+                    et placerat finibus. Praesent justo metus, pharetra vel nibh sit amet, tincidunt posuere nulla.
+                    Vivamus
+                    odio antement, feugiat eget amet, scelerisque velit antement.</p>
+                  <a href="#" class="btn btn-danger btn-round"> <i class="fa fa-align-left"></i> Read Article </a>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
 
         <div class="wave">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -223,10 +248,11 @@
           </svg>
         </div>
       </div>
-      
+
     </section>
 
   </main>
+
 
 
 
