new icon and update navbar and footer -  home page : add event all evnt filter footer and more

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="فعالياتك - اكتشف أحدث الفعاليات والأنشطة الترفيهية والثقافية والرياضية في مدينتك. تابع الفعاليات المميزة واحجز مكانك بسهولة.">
+  <meta name="keywords" content="فعاليات, ترفيه, حفلات, مهرجانات, ثقافة, رياضة, أحداث, جدة, السعودية">
+  <meta name="author" content="فعالياتك">
 
+
+  <!-- bootstrap fontawesom -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css"
     integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU" crossorigin="anonymous">
 
@@ -13,9 +19,17 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
+  <!-- icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icon//apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icon//favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icon//favicon-16x16.png">
+  <link rel="manifest" href="./assets/img/icon//site.webmanifest">
+
+
+
   <link rel="stylesheet" href="./assets/css/index.css" />
 
-  <title>Document</title>
+  <title>فعالياتك</title>
 </head>
 
 <body>
@@ -23,7 +37,7 @@
     <!-- navbar  -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="logo me-3" href="./index.html">شعار الموقع</a>
+        <a class="logo me-3" href="./index.html">فعالياتك</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +46,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item ps-5">
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./index.html">الرئيسية</a>
             </li>
             <li class="nav-item ps-5">
@@ -144,9 +158,16 @@
           <h1><i class="fas fa-list-ul me-2"></i>تصنيفات الفعاليات</h1>
         </div>
 
-        <div class="my-5 d-flex justify-content-around">
+        <div class="my-5 d-flex justify-content-around flex-wrap">
 
           <!-- categories name -->
+          <div id="all" class="categorie-container d-flex justify-content-center">
+            <div
+              class="categorie btn-links btn btn-outline-dark d-flex flex-column align-items-center justify-content-evenly p-4 rounded-circle">
+              <i class="fa-solid fa-calendar-days fa-2xl"></i>
+              <span>جميع الفعاليات</span>
+            </div>
+          </div>
           <div id="music" class="activecategorie-container d-flex justify-content-center ">
             <div class="categorie btn-links btn btn-outline-dark d-flex
          flex-column align-items-center justify-content-evenly p-4 rounded-circle ">
@@ -179,7 +200,7 @@
         </div>
 
         <!-- categories cards -->
-        <div id="cardsContainer" class="row pt-5 m-auto">
+        <div id="cardsContainer" class="row py-5 m-auto">
           <div class="card-deck">
             <!-- Cards will be dynamically inserted here -->
           </div>
@@ -204,8 +225,7 @@
 
     <!-- Latest events -->
 
-    <section class="latest-events wave-sec ">
-
+    <section class="latest-events wave-sec pb-5">
       <div class="container">
         <div class="d-flex justify-content-center mb-4 section-title">
           <h1><i class="fas fa-calendar-check me-2"></i>أحدث الفعاليات</h1>
@@ -213,27 +233,67 @@
         <div class="cards-3 section-gray">
           <div class="row justify-content-center">
 
-            <div class="col-xl-4 col-lg-6 ">
+            <!-- موسم جدة 2025 -->
+            <div class="col-xl-4 col-lg-6">
               <div class="card card-background p-3 m-3"
-                style="background-image: url('http://adamthemes.com/demo/code/cards/images/blog07.jpeg')">
-                <div class="table">
-                  <h6 class="category text-info">Category</h6>
-                  <h3 class="card-caption">Quisque id elit maximus, pretium mollis elit</h3>
-                  <p class="card-description"> Lorem ipsum dolor sit amet, consectetur adipis cingelit. Etiam lacinia
-                    elit
-                    et placerat finibus. Praesent justo metus, pharetra vel nibh sit amet, tincidunt posuere nulla.
-                    Vivamus
-                    odio antement, feugiat eget amet, scelerisque velit antement.</p>
-                  <a href="#" class="btn btn-danger btn-round"> <i class="fa fa-align-left"></i> Read Article </a>
+                style="background-image: url('./assets/img/events/jeddahseason_pics/jeddahseason_pics_4.jpg')">
+                <div class="table text-light">
+                  <h6 class="category text-info ">موسيقى</h6>
+                  <h3 class="card-caption">موسم جدة 2025</h3>
+                  <p class="card-description">
+                    <strong>📅 التاريخ:</strong> 1 – 30 مارس 2025 <br>
+                    <strong>📍 المكان:</strong> جدة – عدة مواقع <br>
+                    فعاليات متنوعة من حفلات، عروض ترفيهية، وتجارب عائلية تناسب جميع الأعمار.
+                  </p>
+                  <a href="./event.html" class="btn btn-danger btn-round">
+                    <i class="fa fa-info-circle"></i> تفاصيل
+                  </a>
                 </div>
               </div>
             </div>
 
+            <!-- مهرجان جدة التراثي 2025 -->
+            <div class="col-xl-4 col-lg-6">
+              <div class="card card-background p-3 m-3"
+                style="background-image: url('./assets/img/events/jeddahheritage_pics/jeddahheritage_pics_2.jpg')">
+                <div class="table text-light">
+                  <h6 class="category text-info">ثقافي</h6>
+                  <h3 class="card-caption">مهرجان جدة التراثي 2025</h3>
+                  <p class="card-description">
+                    <strong>📅 التاريخ:</strong> 5 – 15 نوفمبر 2025 <br>
+                    <strong>📍 المكان:</strong> جدة – البلد التاريخية <br>
+                    احتفال بالتراث المحلي يشمل عروض فلكلورية، حرف تقليدية، وأجواء أصيلة.
+                  </p>
+                  <a href="./event.html" class="btn btn-danger btn-round">
+                    <i class="fa fa-info-circle"></i> تفاصيل
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <!-- معرض جدة الدولي للكتاب -->
+            <div class="col-xl-4 col-lg-6">
+              <div class="card card-background p-3 m-3"
+                style="background-image: url('./assets/img/events/jeddahbookfair_pics/jeddahbookfair_pics_4.jpg')">
+                <div class="table text-light">
+                  <h6 class="category text-info">ثقافي</h6>
+                  <h3 class="card-caption">معرض جدة الدولي للكتاب</h3>
+                  <p class="card-description">
+                    <strong>📅 التاريخ:</strong> 20 – 30 سبتمبر 2025 <br>
+                    <strong>📍 المكان:</strong> جدة – مركز المعارض <br>
+                    معرض يجمع ناشرين محليين وعالميين مع أنشطة ثقافية وورش عمل.
+                  </p>
+                  <a href="./event.html" class="btn btn-danger btn-round">
+                    <i class="fa fa-info-circle"></i> تفاصيل
+                  </a>
+                </div>
+              </div>
+            </div>
 
           </div>
         </div>
 
-
+        <!-- wave -->
         <div class="wave">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
             <path
@@ -248,46 +308,84 @@
           </svg>
         </div>
       </div>
-
     </section>
+
 
   </main>
 
 
 
 
-  <!-- TODO -->
-  <!-- اضافة رقم وايميل تواصل -->
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <ul class="list-inline">
-            <li class="list-inline-item">
-              <a href=""><i class="fab fa-facebook-f"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a href=""><i class="fab fa-pinterest-p"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a href=""><i class="fab fa-google-plus-g"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a href=""><i class="fab fa-twitter"></i></a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-sm-6">
-          <div class="copyright">
-            <p>
-              جميع الحقوق محفوظة
-              <span id="fullyear"></span>
+    <section class="footer wave-sec pb-4 text-center">
+
+      <div class="container">
+        <div class="row gy-3 justify-content-center">
+          <!-- Contact -->
+          <div class="col-md-4">
+            <h5 class="fw-bold">تواصل معنا</h5>
+            <p class="mb-1">
+              <i class="fas fa-phone-alt me-2"></i>
+              <a href="tel:+966501234567" class="text-light text-decoration-none" dir="ltr">+966 50 000 1111</a>
+            </p>
+            <p class="mb-1">
+              <i class="fas fa-envelope me-2"></i>
+              <a href="mailto:info@example.com" class="text-light text-decoration-none">info@example.com</a>
             </p>
           </div>
+
+          <!-- Links -->
+          <div class="col-md-4">
+            <h5 class="fw-bold">روابط سريعة</h5>
+            <div class="d-flex flex-wrap justify-content-center gap-2">
+              <a href="#" class="btn btn-outline-light btn-sm">الرئيسية</a>
+              <a href="./about.html" class="btn btn-outline-light btn-sm">عنا</a>
+              <a href="./events.html" class="btn btn-outline-light btn-sm">الفعاليات</a>
+              <a href="./contact.html" class="btn btn-outline-light btn-sm">تواصل معنى</a>
+            </div>
+          </div>
+
+          <!-- Social -->
+          <div class="col-md-4">
+            <h5 class="fw-bold">تابعنا</h5>
+            <div class="d-flex flex-wrap justify-content-center gap-2">
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-facebook-f me-1"></i>فيسبوك</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-twitter me-1"></i>تويتر</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-instagram me-1"></i>إنستغرام</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-linkedin-in me-1"></i>لينكدإن</a>
+            </div>
+          </div>
+        </div>
+
+        <hr class="border-secondary my-3">
+
+        <div class="text-center small">
+          © <span id="year"></span> جميع الحقوق محفوظة — وسام محمد
         </div>
       </div>
-    </div>
+
+      <div class="wave">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path
+            d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+            opacity=".25" class="shape-fill"></path>
+          <path
+            d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+            opacity=".5" class="shape-fill"></path>
+          <path
+            d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+            class="shape-fill"></path>
+        </svg>
+      </div>
+
+      <button type="button" class="btn btn-floating btn-lg rounded-circle" id="btn-back-to-top">
+        <i class="fas fa-arrow-up"></i>
+      </button>
+
+    </section>
   </footer>
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
