--- a/about.html
+++ b/about.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./assets/Css/index.css" />
-    <link rel="stylesheet" href="./About.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="فعالياتك - اكتشف أحدث الفعاليات والأنشطة الترفيهية والثقافية والرياضية في مدينتك. تابع الفعاليات المميزة واحجز مكانك بسهولة.">
+  <meta name="keywords" content="فعاليات, ترفيه, حفلات, مهرجانات, ثقافة, رياضة, أحداث, جدة, السعودية">
+  <meta name="author" content="فعالياتك">
 
-    <title>Document</title>
-  </head>
+
+  <!-- bootstrap fontawesom -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css"
+    integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+  <!-- icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icon//apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icon//favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icon//favicon-16x16.png">
+  <link rel="manifest" href="./assets/img/icon//site.webmanifest">
+
+
+
+  <link rel="stylesheet" href="./assets/css/index.css" />
+
+  <title>فعالياتك</title>
+</head>
+
   <body>
   <header>
     <!-- navbar  -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="logo me-3" href="./index.html">شعار الموقع</a>
+        <a class="logo me-3" href="./index.html">فعالياتك</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,6 +64,91 @@
 
 
   </header>
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer>
+    <section class="footer wave-sec pb-4 text-center">
+
+      <div class="container">
+        <div class="row gy-3 justify-content-center">
+          <!-- Contact -->
+          <div class="col-md-4">
+            <h5 class="fw-bold">تواصل معنا</h5>
+            <p class="mb-1">
+              <i class="fas fa-phone-alt me-2"></i>
+              <a href="tel:+966501234567" class="text-light text-decoration-none" dir="ltr">+966 50 000 1111</a>
+            </p>
+            <p class="mb-1">
+              <i class="fas fa-envelope me-2"></i>
+              <a href="mailto:info@example.com" class="text-light text-decoration-none">info@example.com</a>
+            </p>
+          </div>
+
+          <!-- Links -->
+          <div class="col-md-4">
+            <h5 class="fw-bold">روابط سريعة</h5>
+            <div class="d-flex flex-wrap justify-content-center gap-2">
+              <a href="#" class="btn btn-outline-light btn-sm">الرئيسية</a>
+              <a href="./about.html" class="btn btn-outline-light btn-sm">عنا</a>
+              <a href="./events.html" class="btn btn-outline-light btn-sm">الفعاليات</a>
+              <a href="./contact.html" class="btn btn-outline-light btn-sm">تواصل معنى</a>
+            </div>
+          </div>
+
+          <!-- Social -->
+          <div class="col-md-4">
+            <h5 class="fw-bold">تابعنا</h5>
+            <div class="d-flex flex-wrap justify-content-center gap-2">
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-facebook-f me-1"></i>فيسبوك</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-twitter me-1"></i>تويتر</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-instagram me-1"></i>إنستغرام</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-linkedin-in me-1"></i>لينكدإن</a>
+            </div>
+          </div>
+        </div>
+
+        <hr class="border-secondary my-3">
+
+        <div class="text-center small">
+          © <span id="year"></span> جميع الحقوق محفوظة — وسام محمد
+        </div>
+      </div>
+
+      <div class="wave">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path
+            d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+            opacity=".25" class="shape-fill"></path>
+          <path
+            d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+            opacity=".5" class="shape-fill"></path>
+          <path
+            d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+            class="shape-fill"></path>
+        </svg>
+      </div>
+
+      <button type="button" class="btn btn-floating btn-lg rounded-circle" id="btn-back-to-top">
+        <i class="fas fa-arrow-up"></i>
+      </button>
+
+    </section>
+  </footer>
+
+
+
+
+  
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
