fixed scrool to top button - add css to contact page

--- a/contact.html
+++ b/contact.html
@@ -64,40 +64,46 @@
 
   <!-- conatact  -->
   <main>
-    <section class="container py-5 ">
+    <section class="container py-5 contact">
 
       <div class="row py-5">
         <!--  contact info -->
-        <div class="col-md-5 mb-4">
+        <div class="col-md-5 mb-4 contact-info">
           <div class="p-4 border rounded shadow-sm">
-            <h2 class="fw-bolder mb-3">تواصل معنا</h2>
+            <h2 class="fw-bolder mb-4">تواصل معنا</h2>
 
             <h6 class="fw-bold">
-              الهاتف <i class="fas fa-phone-alt text-primary"></i>
+              الهاتف <i class="fas fa-phone-alt "></i>
             </h6>
-            <a href="tel:+966500001111" class="text-muted d-block ltr mb-3">+966 50 000 1111</span></a>
+
+            <a href="tel:+966500001111" class="text-muted d-block mb-3 text-decoration-none">
+
+              <span dir="ltr" class="">
+                +966 50 000 1111
+              </span>
+
+            </a>
 
             <h6 class="fw-bold">
-              البريد الإلكتروني <i class="fas fa-envelope text-success"></i>
+              البريد الإلكتروني <i class="fas fa-envelope "></i>
             </h6>
-            <a href="mailto:info@example.com" class="text-muted d-block mb-3">info@example.com</a>
+            <a href="mailto:info@example.com" class="text-muted d-block mb-3 text-decoration-none">info@example.com</a>
 
             <h6 class="fw-bold">
-              مواقع التواصل الاجتماعي <i class="fas fa-share-alt text-dark"></i>
+              مواقع التواصل الاجتماعي <i class="fas fa-share-alt"></i>
             </h6>
-            <div class="d-flex gap-3 mb-3">
+            <div class="d-flex gap-3 my-3 social">
               <a href="#" class="text-muted"><i class="fab fa-twitter fa-2x"></i></a>
               <a href="#" class="text-muted"><i class="fab fa-facebook fa-2x"></i></a>
               <a href="#" class="text-muted"><i class="fab fa-instagram fa-2x"></i></a>
               <a href="#" class="text-muted"><i class="fab fa-linkedin fa-2x"></i></a>
             </div>
 
-            <h5 class="fw-bold mt-4">روابط سريعة</h5>
-            <div class="d-flex flex-wrap justify-content-start gap-2">
-              <a href="#" class="btn btn-outline-light btn-sm">الرئيسية</a>
+            <h6 class="fw-bold mt-4 pb-1">روابط سريعة</h6>
+            <div class="d-flex flex-wrap justify-content-start gap-2 fast-link">
+              <a href="./index.html" class="btn btn-outline-light btn-sm">الرئيسية</a>
               <a href="./about.html" class="btn btn-outline-light btn-sm">عنا</a>
               <a href="./events.html" class="btn btn-outline-light btn-sm">الفعاليات</a>
-              <a href="./contact.html" class="btn btn-outline-light btn-sm">تواصل معنا</a>
             </div>
 
             <!-- Modal Button -->
@@ -196,10 +202,10 @@
           <div class="col-md-4">
             <h5 class="fw-bold">روابط سريعة</h5>
             <div class="d-flex flex-wrap justify-content-center gap-2">
-              <a href="#" class="btn btn-outline-light btn-sm">الرئيسية</a>
+              <a href="./index.html" class="btn btn-outline-light btn-sm">الرئيسية</a>
               <a href="./about.html" class="btn btn-outline-light btn-sm">عنا</a>
               <a href="./events.html" class="btn btn-outline-light btn-sm">الفعاليات</a>
-              <a href="./contact.html" class="btn btn-outline-light btn-sm">تواصل معنى</a>
+              <a href="./contact.html" class="btn btn-outline-light btn-sm">تواصل معنا</a>
             </div>
           </div>
 
@@ -247,7 +253,7 @@
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
   <script src="./assets/js/contact.js"></script>
-  <script src="./assets/js/index.js"></script>
+  <script src="./assets/js/index.js" defer></script>
 </body>
 
 </html>
