--- a/event.html
+++ b/event.html
@@ -198,10 +198,10 @@
           <div class="col-md-4">
             <h5 class="fw-bold">روابط سريعة</h5>
             <div class="d-flex flex-wrap justify-content-center gap-2">
-              <a href="#" class="btn btn-outline-light btn-sm">الرئيسية</a>
+              <a href="./index.html" class="btn btn-outline-light btn-sm">الرئيسية</a>
               <a href="./about.html" class="btn btn-outline-light btn-sm">عنا</a>
               <a href="./events.html" class="btn btn-outline-light btn-sm">الفعاليات</a>
-              <a href="./contact.html" class="btn btn-outline-light btn-sm">تواصل معنى</a>
+              <a href="./contact.html" class="btn btn-outline-light btn-sm">تواصل معنا</a>
             </div>
           </div>
 
@@ -243,9 +243,14 @@
       </button>
     </section>
   </footer>
+  
+  <script src="./assets/js/index.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
