--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
             <div class="col-md-4">
               <h5 class="fw-bold">روابط سريعة</h5>
               <div class="d-flex flex-wrap justify-content-center gap-2">
-                <a href="#" class="btn btn-outline-light btn-sm">الرئيسية</a>
+                <a href="./index.html" class="btn btn-outline-light btn-sm">الرئيسية</a>
                 <a href="./about.html" class="btn btn-outline-light btn-sm"
                   >عنا</a
                 >
@@ -204,5 +204,7 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
+
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
