--- a/events.html
+++ b/events.html
@@ -199,6 +199,7 @@
           </div>
         </div>
         <div class="container">
+          
           <div class="box quality card" data-name="رياضية">
             <div class="img-holder">
               <img
@@ -215,6 +216,12 @@
             </p>
             <a href="./event.html">تفاصيل </a>
           </div>
+
+
+
+
+          
+
           <div class="box time card" data-name="ثقافية">
             <div class="img-holder">
               <img
@@ -334,7 +341,7 @@
             <div class="col-md-4">
               <h5 class="fw-bold">روابط سريعة</h5>
               <div class="d-flex flex-wrap justify-content-center gap-2">
-                <a href="#" class="btn btn-outline-light btn-sm">الرئيسية</a>
+                <a href="./index.html" class="btn btn-outline-light btn-sm">الرئيسية</a>
                 <a href="./about.html" class="btn btn-outline-light btn-sm"
                   >عنا</a
                 >
@@ -342,7 +349,7 @@
                   >الفعاليات</a
                 >
                 <a href="./contact.html" class="btn btn-outline-light btn-sm"
-                  >تواصل معنى</a
+                  >تواصل معنا</a
                 >
               </div>
             </div>
@@ -412,7 +419,7 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-    <script src="../Index/index.js"></script>
     <script src="./assets/js/events.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
