--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item ps-5">
                 <a
-                  class="nav-link active"
+                  class="nav-link active "
                   aria-current="page"
                   href="./index.html"
                   >الرئيسية</a
@@ -314,6 +314,8 @@
           <div id="cardsContainer" class="row py-5 m-auto">
             <div class="card-deck">
               <!-- Cards will be dynamically inserted here -->
+
+              
             </div>
           </div>
         </div>
@@ -483,7 +485,7 @@
             <div class="col-md-4">
               <h5 class="fw-bold">روابط سريعة</h5>
               <div class="d-flex flex-wrap justify-content-center gap-2">
-                <a href="#" class="btn btn-outline-light btn-sm">الرئيسية</a>
+                <a href="./index.html" class="btn btn-outline-light btn-sm">الرئيسية</a>
                 <a href="./about.html" class="btn btn-outline-light btn-sm"
                   >عنا</a
                 >
@@ -491,7 +493,7 @@
                   >الفعاليات</a
                 >
                 <a href="./contact.html" class="btn btn-outline-light btn-sm"
-                  >تواصل معنى</a
+                  >تواصل معنا</a
                 >
               </div>
             </div>
@@ -557,6 +559,9 @@
       </section>
     </footer>
 
+
+    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/home.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -568,6 +573,5 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./assets/js/index.js"></script>
   </body>
 </html>
