fix respons evemts section

--- a/event.html
+++ b/event.html
@@ -436,7 +436,7 @@
           class="btn btn-floating btn-lg rounded-circle"
           id="btn-back-to-top"
         >
-          <i class="fas fa-arrow-up"></i>
+        <i class="fas fa-arrow-up" style="color: white;"></i>
         </button>
       </section>
     </footer>
