--- a/events.html
+++ b/events.html
@@ -199,7 +199,6 @@
           </div>
         </div>
         <div class="container">
-          
           <div class="box quality card" data-name="رياضية">
             <div class="img-holder">
               <img
@@ -216,11 +215,6 @@
             </p>
             <a href="./event.html">تفاصيل </a>
           </div>
-
-
-
-
-          
 
           <div class="box time card" data-name="ثقافية">
             <div class="img-holder">
@@ -341,7 +335,9 @@
             <div class="col-md-4">
               <h5 class="fw-bold">روابط سريعة</h5>
               <div class="d-flex flex-wrap justify-content-center gap-2">
-                <a href="./index.html" class="btn btn-outline-light btn-sm">الرئيسية</a>
+                <a href="./index.html" class="btn btn-outline-light btn-sm"
+                  >الرئيسية</a
+                >
                 <a href="./about.html" class="btn btn-outline-light btn-sm"
                   >عنا</a
                 >
