dark mode fix - home  - about - contact

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,8 @@
   <link rel="manifest" href="./assets/img/icon//site.webmanifest" />
 
   <link rel="stylesheet" href="./assets/css/index.css" />
-  <link rel="stylesheet" href="./assets/css/darkMode.css" />  <link rel="stylesheet" href="./assets/css/contact.css" />
+  <link rel="stylesheet" href="./assets/css/contact.css" />
+  <link rel="stylesheet" href="./assets/css/darkMode.css" />
 
   <title>فعالياتك</title>
 </head>
@@ -117,7 +118,7 @@
         </div>
 
         <!-- Card -->
-        <div class="col-md-7">
+        <div class="col-md-7 msg-card">
           <div class="card shadow">
             <div class="card-body">
               <h4 class="card-title fw-bold mb-4">أرسل رسالة</h4>
