--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icon//favicon-16x16.png" />
   <link rel="manifest" href="./assets/img/icon//site.webmanifest" />
 
-  <link rel="stylesheet" href="./assets/Css/About.css">
   <link rel="stylesheet" href="./assets/css/index.css" />
+  <link rel="stylesheet" href="./assets/Css/About.css">
   <link rel="stylesheet" href="./assets/css/darkMode.css" />
   <title>فعالياتك</title>
 </head>
@@ -56,7 +56,7 @@
               <a class="nav-link active" href="./about.html">عنا</a>
             </li>
           </ul>
-                    <button id="theme-toggle" class="btn btn-outline-secondary me-3">
+          <button id="theme-toggle" class="btn btn-outline-secondary me-3">
             <i class="fas fa-sun"></i>
           </button>
         </div>
@@ -124,7 +124,7 @@
 
     <section class="members ">
       <div class="testimonials py-5" id="testimonials">
-        <h1>من يقف خلف المنصة؟</h1>
+        <h1 class="pb-4">من يقف خلف المنصة؟</h1>
         <div class="container">
           <div class="box">
             <img decoding="async" src="./assets/img/about/wesam.jpg" alt="" />
@@ -299,7 +299,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
-    <script src="./assets/js/index.js"></script>
+  <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
